[tool.poetry]
name = "sensor-data-parser"
version = "1.0.0"
description = "A parser of the data from a sensor."
authors = ["Artyom Borisov <2001raf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "==2.0.23"
argparse = "==1.4.0"
pytest = "==7.4.3"
click = "==8.1.7"
black = "==23.11.0"
isort = "==5.10"
flake8 = "==4.0"

[flake8]
ignore = ['E203', 'E266', 'E501', 'W503', 'E722', 'F401']
max-line-length = 80
max-complexity = 18
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']

[tool.isort]
profile = 'black'

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


