[tool.poetry]
name = "sensor_data_parser"
version = "1.0.0"
description = "A parser of data from a sensor."
authors = ["Artyom Borisov <2001raf@gmail.com>"]

[tool.poetry.scripts]
parser = "sensor_data_parser.main:main"

[tool.poetry.dependencies]
python = "~3.10"
SQLAlchemy = "==2.0.23"
argparse = "==1.4.0"
pytest = "==7.4.3"
pytest-faker = "==2.0.0"
pytest-cov = "==4.1.0"
autopep8 = "2.0.4"
isort = "==5.12.0"
flake8-pyproject = "==1.2.3"
faker = "==20.1.0"

[tool.isort]
line_length = 79
profile = 'black'

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
verbose = true
aggressive = 3

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test"]
filterwarnings = ["ignore::DeprecationWarning"]
